# FOODIEZ

./: .gitignore  CMakeLists.txt  Exploremodel.cpp  Exploremodel.h  Loginauthentication.cpp  Loginauthentication.h  Postmodel.cpp  Postmodel.h  Profilemodel.cpp  Profilemodel.h  README.md  Reelmodel.cpp  Reelmodel.h  Uploadmodel.cpp  Uploadmodel.h  main.cpp  main.qml  resources.qrc
Assets/components/: PostItem.qml  ReelItem.qml  StoryItem.qml
Assets/pages/: Create.qml  Explore.qml  Home.qml  Login.qml  MainContent.qml  Profile.qml  Reels.qml
FoodiezBackend/: manage.py  requirements.txt
FoodiezBackend/FoodiezBackend/: asgi.py  settings.py  urls.py  wsgi.py
FoodiezBackend/FoodiezBackend/settings/: __init__.py  base.py  development.py  production.py
FoodiezBackend/common/: models.py
FoodiezBackend/post/: admin.py  consumers.py  models.py  serializers.py  tests.py  urls.py  views.py
FoodiezBackend/post/migrations/: 0001_initial.py  0002_recipe_recipestep.py
FoodiezBackend/user/: admin.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
FoodiezBackend/user/migrations/: 0001_initial.py
android/: AndroidManifest.xml
media_analysis/: pyproject.toml  requirements.txt
media_analysis/media_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
media_analysis/media_analysis/models/: dishes.txt  food101_model_new.pt  food_101_classifier.py  frame_analyzer.py  hello.py  media_analyzer.py
media_analysis/media_analysis/tests/: test_frame_analyzer.py  test_video_processing.py
media_analysis/media_analysis/utils/: recipes.py  video_processing.py
media_analyzer/: pyproject.toml
media_analyzer/media_analyzer/: pyproject.tst
media_analyzer/media_analyzer/model/: prompt_analyzer.py  prompt_analyzer_prompt.py  video_analyzer.py  video_prompts.py
media_analyzer/media_analyzer/utils/: constants.py
media_analyzer/model/: video_analyzer.py
